--- a/plant_disease_detection/templates/home.html
+++ b/plant_disease_detection/templates/home.html
@@ -11,7 +11,7 @@
 
   <div class="carousel-inner" style="border-radius: 10px; overflow: hidden; height: 500px;">
     <div class="carousel-item active">
-      <img class="d-block w-100 zoomable" src="{{ url_for('static', filename='images/image1.1.jpg') }}" alt="First slide" style="height: 500px; width: 100%; object-fit: cover; transition: transform 0.3s ease;">
+      <img class="d-block w-100 zoomable" src="{{ url_for('static', filename='images/ScoutNotes (3).jpg') }}" alt="First slide" style="height: 500px; width: 100%; object-fit: cover; transition: transform 0.3s ease;">
     </div>
     <div class="carousel-item">
       <img class="d-block w-100 zoomable" src="{{ url_for('static', filename='images/image2.jpeg') }}" alt="Second slide" style="height: 500px; width: 100%; object-fit: cover; transition: transform 0.3s ease;">
