change in corn dis spel le

--- a/plant_disease_detection/templates/corn_disease_detection.html
+++ b/plant_disease_detection/templates/corn_disease_detection.html
@@ -77,7 +77,7 @@
     </header>
     <div class="container">
         <div class="left-container">
-            <button onclick="showContent()">L E</button>
+            <button onclick="showContent()">L E A F</button>
             <button onclick="showContent()">S T E M / R O O T</button>
         </div>
         <div class="right-container" id="right-container" >
