image display issue solved

--- a/plant_disease_detection/templates/corn_disease_detection.html
+++ b/plant_disease_detection/templates/corn_disease_detection.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Side-by-Side Containers</title>
+    <title>🌱Corn Disease Detection</title>
     <link rel="stylesheet" href="style.css">
     <style>
         @keyframes fadeIn {
