--- a/plant_disease_detection/templates/tomato_result.html
+++ b/plant_disease_detection/templates/tomato_result.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plant Disease Detection Result</title>
+    <title>🌱Tomato Disease Result</title>
     <style>
         body {
             background-image: url('{{ url_for('static', filename='images/ScoutNotes (2).jpg') }}');
