potato stem done my m

--- a/plant_disease_detection/templates/potato_disease_detection.html
+++ b/plant_disease_detection/templates/potato_disease_detection.html
@@ -13,7 +13,7 @@
         }
 
         body {
-            background-image: url('{{ url_for('static', filename='images/ScoutNotes (2).jpg') }}');
+            background-image: url('{{ url_for('static', filename='images/potato.jpg') }}');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
