--- a/plant_disease_detection/templates/potato_result.html
+++ b/plant_disease_detection/templates/potato_result.html
@@ -6,7 +6,7 @@
     <title>Plant Disease Detection Result</title>
     <style>
         body {
-            background-image: url('{{ url_for('static', filename='images/image4.jpg') }}');
+            background-image: url('{{ url_for('static', filename='images/potato.jpg') }}');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
