updated pepper stem

--- a/plant_disease_detection/templates/pepper_disease_detection.html
+++ b/plant_disease_detection/templates/pepper_disease_detection.html
@@ -157,7 +157,7 @@
       <div class="container">
           <div class="left-container">
               <h1>PEPPER DISEASES</h1>
-              <p>Pepper is the most popular crop in the world and in every kitchen, it is found in different forms irrespective of the cuisine. After potato and sweet potato, it is the crop which is cultivated worldwide. India ranked 2 in the production of tomato. However, the quality and quantity of tomato crop goes down due to the various kinds of diseases. So, to detect the disease a deep learning-based approach is discussed in the article. For the disease detection and classification, a Convolution Neural Network based approach is applied.</p>
+              <p>Pepper is one of the most popular and widely cultivated crops globally, essential in various cuisines and found in kitchens across the world in multiple forms—whether fresh, dried, or processed. After crops like tomato and potato, pepper is among the top cultivated crops worldwide. India ranks significantly in pepper production, contributing to the global supply of both sweet and hot varieties.However, the quality and yield of pepper crops can be severely affected by various diseases, leading to substantial economic losses. To address this issue, a deep learning-based approach can be employed to detect and classify pepper plant diseases. Specifically, a Convolutional Neural Network (CNN) based approach is effective in identifying diseases in pepper plants.</p>
               <button onclick="showContent('leaf')">L E A F</button>
               <button onclick="showContent('stem')">S T E M / R O O T</button>
           </div>
