banana leaf added camera and small ui changes

--- a/plant_disease_detection/templates/fertilizer.html
+++ b/plant_disease_detection/templates/fertilizer.html
@@ -1,6 +1,20 @@
 {% extends "base.html" %}
 {% block content %}
+<style>
+  
+</style>
 <header class="my-4">
-  <h1>LEAF DETECTION</h1>
+  <div class="button-container">
+    <div class="button">
+      <img src="fertilizer-icon.png" alt="Fertilizer Calculator">
+      <span>Fertilizer calculator</span>
+      <i class="arrow">&#8594;</i>
+    </div>
+    <div class="button">
+      <img src="pests-diseases-icon.png" alt="Pests & Diseases">
+      <span>Pests & diseases</span>
+      <i class="arrow">&#8594;</i>
+    </div>
+  </div>
 </header>
 {% endblock %}
